@@ -1,3 +1,11 @@
+2018-10-29  Dmitriy Selivanov  <selivanov.dmitriy@gmail.com>
+
+	* DESCRIPTION (Version, Date):  minor version
+	* digest2int.R (digest2int): added digest2int
+	* src/digest2int.c (digest2int): added Bob Jenkins
+	`one_at_a_time` function for hashing arbitrary
+	character vectors to integer vectors
+
 2018-10-18  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Added dependencies badge
